--- a/TASK/Netflix.css
+++ b/TASK/Netflix.css
@@ -48,22 +48,22 @@ header {
     color: white;
     text-align: center;
     margin-top: 100px;
-font-size: 20px;}
+font-size: 25px;}
 .mail{
-    height: 40px;
+    height: 50px;
     background-color: rgba(71, 69, 69, 0.596);
     color: white;   
-    width:240px; 
+    width:260px; 
 }
 .pri{
     display: flex;
     justify-content: center;
 }
 .get{
-    height: 40px;
+    height: 50px;
     background-color: red;
     color: white;
-    width: 120px;
+    width: 150px;
     margin-left: 5px;
 }
 .mmm
@@ -84,6 +84,8 @@ font-size: 30px;
 
 .ppp{
     padding: 180px 0px ;
+    background-color: black;
+    color: white;
 }
 .vd{
     height: 200px;
@@ -91,6 +93,15 @@ font-size: 30px;
 }
 .nnn{
     border: 1px solid black;
+    background-color: black; 
+    display: flex;
+}
+.ooo{
+    display: flex;
     background-color: black;
-    
+}
+.main{
+    border:  1px solid black;
+    background-color: black;
+    color: white;
 }
