--- a/TASK/Netflix.css
+++ b/TASK/Netflix.css
@@ -101,7 +101,7 @@ font-size: 30px;
     background-color: black;
 }
 .main{
-    border:  1px solid black;
+    border:  1px solid rgb(250, 248, 248);
     background-color: black;
     color: white;
 }
